--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "debug": "^4.3.4",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
-    "puppeteer": "^10.0.0"
+    "puppeteer": "^20.8.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/debug": "^4.1.8",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.4.0",
-    "jest": "^29.6.1",
-    "nodemon": "^2.0.7",
-    "ts-jest": "^29.1.1",
+    "jest": "^29.5.0",
+    "nodemon": "^1.14.9",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
