--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "debug": "^4.3.4",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
@@ -20,6 +21,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/debug": "^4.1.8",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
