creates puppeteer sevice and test

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # APP
 PORT=8080
-
+HOTEL_SITE_URL=https://pratagy.letsbook.com.br/D/Reserva
+CHROME_PATH_MAC_M1="/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
