--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "eslint": "^8.44.0",
     "jest": "^29.5.0",
     "nodemon": "^1.14.9",
     "ts-jest": "^29.1.0",
