--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -31,6 +31,7 @@ jobs:
         run: npm install
   test:
     runs-on: ubuntu-latest
+    needs: install
 
     steps:
     - uses: actions/checkout@v3
