--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -14,7 +14,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  install:
+  Tests:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -28,20 +28,8 @@ jobs:
           node-version: 16
 
       - name: Install Dependencies
-        run: npm install
-  test:
-    runs-on: ubuntu-latest
-    needs: install
-
-    steps:
-    - uses: actions/checkout@v3
-    # - uses: actions/setup-node@v3
-    #   with:
-    #     node-version: 16
-    #     cache: npm
-
-    - name: Lint
-      run: npx eslint .
-
-    - name: Test
-      run: npm t
+        run: npm ci
+      - name: Run lint
+        run: npx eslint .
+      - name: Run Tests
+        run: npm t
