--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -23,6 +23,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   tests:
+    name: Lint and Tests
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -44,7 +45,7 @@ jobs:
         run: npm run test:unit
 
   build_push_image:
-    name: Deploy
+    name: Build Docker image and Publish
     runs-on: ubuntu-latest
     environment: dev
     needs: tests
@@ -78,6 +79,7 @@ jobs:
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
   terraform:
+    name: Deploy infra and Application
     runs-on: ubuntu-latest
     needs: build_push_image
 
