--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "debug": "^4.3.4",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
+    "express-winston": "^4.2.0",
     "puppeteer": "^20.8.0",
+    "winston": "^3.9.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
